--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "48.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~11.1.1",
@@ -20,6 +22,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-web": "0.18.10"
   },
   "devDependencies": {
