--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
     "expo": "48.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~11.1.1",
@@ -26,7 +27,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "0.18.10"
+    "react-native-web": "0.18.10",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
