--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "0.18.10",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "lottie-react-native": "5.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
