--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-web": "0.18.10",
     "react-native-svg": "13.4.0",
-    "lottie-react-native": "5.1.4"
+    "lottie-react-native": "5.1.4",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
