--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@expo-google-fonts/jost": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "expo": "48.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -27,10 +31,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "0.18.10",
     "react-native-svg": "13.4.0",
-    "lottie-react-native": "5.1.4",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-web": "0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
